Tentando resolver cache e layout shift

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ li p{
     border:3px solid #fccb02;
     border-radius:5px;
     font-size:.9em;
+    font-family: "robotoregular", sans-serif;
 }
 .brand{
     width: 70px;
